<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
 <ImageView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:src="@drawable/thecheezery"
     android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/purpleishGrey">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textColor="@color/dustyWhite"
            android:fontFamily="@string/light"
            android:layout_margin="5dp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/dustyWhite"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:background="@color/colorAccent"
            android:textColor="@color/dustyWhite"
            android:layout_gravity="center"
            android:paddingHorizontal="50dp"
            android:layout_margin="10dp"/>
    </LinearLayout>



</LinearLayout>