<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ColdDrinkActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="210dp"
        android:src="@drawable/beverage"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_title_cold"
        android:textAlignment="center"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_margin="30dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/btn_naranja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cold_drinks_oj"
                android:layout_marginRight="5dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/dustyWhite"
                android:textSize="20sp"
                android:fontFamily="sans-serif"/>
            <Button
                android:id="@+id/btn_uva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cold_drinks_uva"
                android:layout_marginLeft="5dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/dustyWhite"
                android:textSize="20sp"
                android:fontFamily="sans-serif"/>

        </TableRow>
    </TableLayout>

</LinearLayout>